Fixed what inklings you can invite people to. Fixed alignment issues.

--- a/myproject/inkle/static/css/home.css
+++ b/myproject/inkle/static/css/home.css
@@ -57,7 +57,7 @@
     border: solid 2px #288D42;
     background-color: #ABD4B0;
     width: 250px;
-    margin: 0px 16px 0px 16px;
+    margin: 0px 15px 0px 15px;
     padding: 5px 10px 10px 10px;
     text-align: left;
     float: left;
